js/js.translator/testData/incremental/invalidation/moveExternalDeclarationsBetweenJsModules/js-module-c-new.mjs
export function externalDemoFunction() { return 5; }